worked on scrollbar issue

--- a/scss/modules/column-navigation.scss
+++ b/scss/modules/column-navigation.scss
@@ -4,7 +4,7 @@
     .column-navigation {
         background-color: $white;
         border: 1px solid $grayLighter;
-        overflow-x: scroll;
+        overflow-x: auto;
         overflow-y: hidden;
         white-space: nowrap;
 
